[FIX] add overflow in sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ body{
     height: calc(100vh - 100px);
     width: 75px;
     background-color: rgb(0, 0, 0);
+    overflow-y: hidden;
 }
 #main-content{
     background-color: rgb(18, 26, 36);
@@ -79,7 +80,7 @@ header{
 header .row{
     justify-content: flex-end;
     align-items: center;
-    
+    height: 100%;
 }
 header button{
     background-color: rgba(0, 0, 0, 0.6);
@@ -95,7 +96,7 @@ header button:hover{
 /* BLOCKS IN MAIN-CONTENT  */
 .container{
     width: 100%;
-    
+    height: 100%;
 }
 .row{
     display: flex;
@@ -329,7 +330,7 @@ hr.bg_white{
     height: 15px;
     width: 15px;
     position: absolute;
-    top: 40px;
+    top: 45px;
     right: 60%;
     cursor: pointer;
 }
